--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ SECRET_KEY=secret124
 
 
 DATABASE_URL="postgresql://neondb_owner:npg_70oGwsZjfvLB@ep-green-pine-a4p6ubiq-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
+
+PRODATABASE_URL="postgresql://LetsBuild_owner:npg_mNLoUg5Ilz3t@ep-cool-dew-a49aewqi-pooler.us-east-1.aws.neon.tech/LetsBuild?sslmode=require"
