Refactor package.json to shorten migration command, add form router to server.js, and introduce Form, FormField, FormFieldOption, and FormSubmission models in schema.prisma. Implement a new endpoint for normal file deletion in upload.js.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate",
     "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "makemigration": "npx prisma migrate dev",
+    "mg": "npx prisma migrate dev",
     "migrate": "npx prisma migrate deploy",
     "reset": "npx prisma migrate reset",
     "generate": "npx prisma generate",
