--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.5.0",
     "googleapis": "^148.0.0",
+    "ioredis": "^5.6.1",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
